<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_type" />

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_description" />

    <CheckBox
        android:id="@+id/cbAlreadyPurchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_purchased" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item" />


</LinearLayout>